# book-merger

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: orderbook.proto
server/: Cargo.toml  build.rs
server/src/: book_streamer.rs  client.rs  connector.rs  exchange_tools.rs  lib.rs  main.rs
src/: binance.rs  bitstamp.rs  book-parser.rs  book_streamer.rs  client.rs  connector.rs  error.rs  exchange_tools.rs  grpc_tools.rs  lib.rs  main.rs  test.rs
web-trunk-client/: Cargo.toml  build.rs  config.toml  index.html  style.css
web-trunk-client/src/: lib.rs
web-trunk-client/src/components/: agent.rs  mod.rs  order_table.rs
