[package]
name = "book-merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", default-features = false, features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
futures-util = { version = "0.3.28", default-features = true, features = ["sink", "std"] }
url = "2.4.0"
futures = "0.3.28"
futures-executor = "0.3.28"
rust_decimal = "1.31.0"


