[package]
name = "book-merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", default-features = false, features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
futures-util = { version = "0.3.28", default-features = true, features = ["sink", "std"] }
url = "2.4.0"
futures = "0.3.28"
futures-executor = "0.3.28"
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.2"
tonic = "0.9.2"
log = "0.4.19"
async-stream = "0.3.5"
prost = "0.11.9"
clap = { version = "3", features = ["derive"] }
num-traits = "0.2.16"
tuple-conv = "1.0.1"
http = "0.2.9"
itertools = "0.11.0"
futures-channel = "0.3.28"
tokio-util = "0.7.8"
tokio-stream = "0.1.14"
serial_test = "2.0.0"
tonic-web = "0.9.2"
tower-http = { version = "0.4.0", default-features = false, features = ["cors",] }

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "book-merger-server"
path = "src/main.rs"

[[bin]]
name = "book-merger-client"
path = "src/client.rs"
