[package]
name = "book-merger-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = { version = "0.2"}
js-sys = "0.3.63"
web-sys = { version = "0.3", features=[
  "Event",
  "EventSource",
  "Headers",
  "HtmlInputElement",
  "MessageEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "File", 
  "DragEvent", 
  "DataTransfer",
  "HtmlSelectElement"
]}
gloo-events = "0.1.1"
serde_json = "1.0.96"
serde = "1.0"
serde_derive = "1.0"
log = "0.4.6"
wasm-logger = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
chrono = "0.4.24"
parking_lot = "0.10.0"
rand = "0.8.5"
hyper = { version = "0.14", optional = true }
http = { version = "0.2", optional = true }
gloo = "0.8.0"
yew-agent = "0.2.0"
gloo-net = "0.2.6"
tonic-web-wasm-client = "0.4.0"
prost = "0.11.9"
tonic = { version = "0.9.2", default-features = false, features = [
    "prost",
    "codegen",
] }
wasm-bindgen-futures = "0.4.37"

[build-dependencies]
tonic-build = { version = "0.9.2", default-features = false, features = [
    "prost",
] }

